...

                    <Space
                        android:layout_width="30dp"
                        android:layout_height="10dp">
                    </Space>
                    <EditText
                        android:id="@+id/entertemp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:gravity="center"
...
                        android:layout_width="30dp"
                        android:layout_height="10dp">

                    </Space>

                    <EditText
                        android:id="@+id/enterdissolvedoxygen"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:gravity="center"
...
                        android:layout_width="30dp"
                        android:layout_height="10dp">

                    </Space>

                    <EditText
                        android:id="@+id/enterpH"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:gravity="center"
...
                        android:layout_width="30dp"
                        android:layout_height="10dp">

                    </Space>

                    <EditText
                        android:id="@+id/enterConductivity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:gravity="center"
...
                        android:layout_width="30dp"
                        android:layout_height="10dp">

                    </Space>

                    <EditText
                        android:id="@+id/enterbiochemoxygen"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:inputType="numberDecimal"
...
                        android:layout_width="30dp"
                        android:layout_height="10dp">

                    </Space>

                    <EditText
                        android:id="@+id/enterNitrate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:gravity="center"
...
                    <Space
                        android:layout_width="30dp"
                        android:layout_height="10dp">

                    </Space>
                    <EditText
                        android:id="@+id/enterFacealColiform"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:gravity="center"
...

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:backgroundTint="#0091EA"
                app:cardCornerRadius="25dp"
                android:id="@+id/next"
                android:layout_margin="18dp"
                android:clickable="true"
                android:layout_height="50dp">
                <TextView
                    android:id="@+id/nexttext"
                    android:layout_width="wrap_content"
...
