...
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioGroup
            android:layout_width="wrap_content"
            android:id="@+id/radioGrp"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="English"
                android:textSize="35dp"
...
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="हिंदी"
                android:textSize="35dp"
                android:fontFamily="sans-serif-medium"
                android:id="@+id/hin"
                tools:ignore="MissingConstraints">

            </RadioButton>
        </RadioGroup>
    </LinearLayout>
    <Space
...
