...
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            tools:ignore="MissingConstraints">
            <AutoCompleteTextView
                android:id="@+id/selectlocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </com.google.android.material.textfield.TextInputLayout>


...
